Fix css hidden scrollbars with the wall

--- a/styles/global.css
+++ b/styles/global.css
@@ -12,7 +12,6 @@ body {
   font-size: 18px;
   background-color: #151616;
   color: white;
-    overflow: hidden;
 }
 
 html {
